    instead of truncating.  (robs)
  o Fix [2028181] w64 float format incompatibility.  (Tim Munro)

Effects:

  o New `overdrive' effect.  (robs)
  o New `pluck' and `tpdf' types for `synth'.  (robs)
  o Can now set common parameters for multiple `synth' channels.  (robs)
  o Fix `repeat' sometimes stopping repeating too soon.  (robs)

Other new features:

  o New bitrate, time in seconds, & total options for soxi.  (robs)
  o Added ability to create shared DLL's on cygwin (cbagwell)

Other bug fixes:

  o Fix [2262177] SoX build could fail with parse /etc/issue error.  (robs)
  o Fix reading AIFF files with pad bytes in COMT chunks. (Joe Holt)
  o Fix AIFF file length bug to stop reading trash data on files that
    have extra chunks at end of file. (Joe Holt)
  o Fix file length being 4 bytes short for AIFF sowt CD tracks. (Joe Holt)

Internal improvements:

  o Rationalise use of and make repeatable across different platforms
    pseudo random number generators.  (robs)


sox-14.2.0	2008-11-09
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.0.0   E pitch                 new pitch = old key

Previously deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.1.0   E resample              ~= rate                 2009-01-29
  14.1.0   E polyphase             ~= rate                 2009-01-29
  14.1.0   E rabbit                ~= rate                 2009-01-29
  14.1.0   F flac: libFLAC 1.1.1   libFLAC > 1.1.1         2009-01-29
  14.1.0   F wve (native)          wve (libsndfile)        2009-07-29
  14.1.0   Behaviour whereby       soxi                    2009-07-29